--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,14 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 project(vcpkgDemo LANGUAGES C CXX VERSION 0.9.0)
 
+find_package(fmt CONFIG REQUIRED)
+
 # 启用测试功能
 include(CTest)  # 启用 CTest 框架
 enable_testing()  # 允许 add_test() 添加测试, 须放在 add_test() 之前
 
 # 添加子目录
-# add_subdirectory(include)
+add_subdirectory(src)
 # add_subdirectory(examples)
 # add_subdirectory(external)
 # add_subdirectory(tests)
