feat: add nlohmann_json lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ target_include_directories(main INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
 target_link_libraries(main PRIVATE fmt::fmt)        # fmt库
 target_link_libraries(main PRIVATE CLI11::CLI11)    # CLI11库
+target_link_libraries(main PRIVATE nlohmann_json::nlohmann_json)    # nlohmann_json库
