feat: add spdlog library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ find_package(fmt CONFIG REQUIRED)
 find_package(CLI11 CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(range-v3 CONFIG REQUIRED)
+find_package(spdlog REQUIRED)
 
 # 启用测试功能
 include(CTest)  # 启用 CTest 框架
