--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,4 @@ target_link_libraries(main PRIVATE fmt::fmt)        # fmt库
 target_link_libraries(main PRIVATE CLI11::CLI11)    # CLI11库
 target_link_libraries(main PRIVATE nlohmann_json::nlohmann_json)    # nlohmann_json库
 target_link_libraries(main PRIVATE range-v3::range-v3)  # range-v3库
+target_link_libraries(main PRIVATE spdlog::spdlog)      # spdlog库
