--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ find_package(CLI11 CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(range-v3 CONFIG REQUIRED)
 find_package(spdlog REQUIRED)
+find_package(libiconv REQUIRED)
 
 # 启用测试功能
 include(CTest)  # 启用 CTest 框架
